--- a/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
@@ -4,7 +4,7 @@
 
 
 <section>
-    <div class="auto-container pt-5">
+    <div class="auto-container pt-4 pt-md-5">
         <div class="row clearfix">
             {{- partial "docs_sidebar.html" . -}}
             {{ block "main" . }}{{ end }}
