--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,12 +1,12 @@
 {{$currentNode := .}}
-<nav class="col-lg-3 col-md-3 col-12 mt-4 position-relative">
+<nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-4 position-relative">
     <div id="accordion" class="sticky-top">
         {{ range where .Site.RegularPages "Section" .Section }}
 
         <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
             <div class="link-group-heading" id="headingOne">
                 <span class="mb-0">
-                    <a class="btn btn-link collapsed" href="{{ .Permalink }}">
+                    <a class="btn btn-link collapsed pl-0" href="{{ .Permalink }}">
                         {{ .Title }}
                     </a>
                 </span>
@@ -20,6 +20,6 @@
         {{ end }}
         
         <br/>
-        <span style="padding: .375rem .75rem;">Docs version: {{ .Site.Params.docVersion }}</snap>
+        <span class="d-inline-block mb-4">Docs version: {{ .Site.Params.docVersion }}</span>
     </div>
 </nav>
