--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -217,7 +217,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
     <ul class="sponsors-outer">
       {{ range $i, $e := first 3 .Pages }}
       <li class="mt-3 mb-3 image-box">
-        <a href="{{ .Params.origin_url }}"><img src="{{ .Params.image }}-mono.png" alt=""></a>
+        <a href="{{ .Params.origin_url }}" target="_blank" rel="nofollow"><img src="{{ .Params.image }}-mono.png" alt=""></a>
       </li>
       {{ end }}
     </ul>
