--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -1,4 +1,5 @@
 @use "../helpers/functions" as lib;
+@use "../helpers/mixins" as mixins;
 
 article aside[role="alert"],
 article aside[role="status"] {
@@ -45,249 +46,4 @@ article aside[role="status"]:before {
   font-weight: 900;
 }
 
-@mixin content-reset {
 
-  table {
-    @extend .table;
-    color: var(--brand-secondary);
-  }
-
-  pre {
-    position: relative;
-  }
-
-  img {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  ul,
-  ol {
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-
-  ul > li {
-    margin: 0 0 0 lib.rem(19);
-    position: relative;
-    list-style: disc;
-  }
-
-  ol > li {
-    margin: 0 0 0 lib.rem(19);
-    position: relative;
-    list-style: decimal;
-  }
-
-  figure {
-    text-align: center;
-  }
-}
-
-.documentation {
-  @include content-reset;
-
-  h1 {
-    font-size: 2.25rem;
-  }
-
-  h2 {
-    font-size: 1.75rem;
-  }
-
-  h3 {
-    font-size: 1.25rem;
-  }
-
-  h4 {
-    font-size: 1.25rem;
-  }
-
-  h5 {
-    font-size: 1.25rem;
-  }
-
-  h6 {
-    font-size: 1.25rem;
-  }
-
-  p {
-    margin-bottom: 0.7rem;
-  }
-}
-
-.article,
-.blog {
-  font-family: $font-family-content;
-  font-size: lib.rem(22);
-  font-weight: 400;
-  line-height: lib.rem(34);
-
-  @include content-reset;
-
-  p, span, ul, ol, li {
-    font: inherit;
-  }
-
-  p, ul {
-    margin-bottom: 2rem;
-  }
-
-  h1, h2, h3, h4, h5 {
-    margin-bottom: lib.rem(24);
-    font-family: $font-family-non-content;
-    font-weight: 700;
-    font-style: normal;
-  }
-
-  h1 {
-    font-size: lib.rem(40);
-    line-height: lib.rem(48);
-  }
-
-  h2 {
-    font-size: lib.rem(28);
-    line-height: lib.rem(33);
-  }
-
-  ul, ol {
-    margin-left: 0;
-  }
-
-  &>ul, &>ol {
-    margin-left: lib.rem(24);
-  }
-
-  li {
-    margin-left: 0;
-  }
-
-  img {
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    border-radius: lib.rem(14);
-  }
-
-  figcaption {
-    margin-top: lib.rem(10);
-    font-size: lib.rem(22);
-    font-style: italic;
-    line-height: lib.rem(34);
-  }
-
-  &__info {
-    display: flex;
-    align-items: center;
-    margin-bottom: lib.rem(24);
-    color: var(--brand-dark-gray);
-    font-family: $font-family-non-content;
-    font-size: 1rem;
-    font-weight: 400;
-    font-style: normal;
-    line-height: lib.rem(17);
-    flex-wrap: wrap;
-  }
-
-  &__cover {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    border-radius: lib.rem(14);
-    overflow: hidden;
-
-    @include media-breakpoint-up(lg) {
-      height: lib.rem(300);
-    }
-
-    img {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  /* border bottom */
-  &_bb {
-    border-bottom: 1px solid var(--brand-mid-grey);
-  }
-}
-
-.article-title {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: lib.rem(14);
-  color: var(--brand-secondary);
-
-  @include media-breakpoint-up(md) {
-    flex-direction: row;
-  }
-
-  & > h1, & > h2, & > h3 {
-    margin-bottom: 0;
-    font-size: lib.rem(40);
-    line-height: lib.rem(48);
-  }
-
-  &__image {
-    display: block;
-    width: 100%;
-    height: lib.rem(94);
-    margin-bottom: lib.rem(16);
-    text-align: center;
-    border-radius: lib.rem(14);
-    overflow: hidden;
-
-    @include media-breakpoint-up(md) {
-      width: lib.rem(56);
-      height: lib.rem(56);
-      margin-right: lib.rem(12);
-      margin-bottom: 0;
-    }
-
-    img {
-      width: auto;
-      height: lib.rem(94);
-      object-fit: cover;
-
-      @include media-breakpoint-up(md) {
-        width: auto;
-        height: lib.rem(56);
-      }
-    }
-  }
-
-}
-
-.article {
-  padding-top: lib.rem(24);
-
-  @include media-breakpoint-up(lg) {
-    padding-top: lib.rem(38);
-  }
-}
-
-.blog {
-  padding-top: lib.rem(20);
-  padding-right: lib.rem(70);
-  padding-left: lib.rem(70);
-  word-break: break-word;
-
-  @media only screen and (max-width: 599px) {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  @media only screen and (max-width: 1023px) {
-    padding-right: lib.rem(10);
-    padding-left: lib.rem(10);
-  }
-
-  p {
-    &:first-child {
-      margin-top: 0;
-    }
-  }
-}
