--- a/qdrant-landing/themes/qdrant/static/css/blocks/_blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_blog.scss
@@ -317,7 +317,7 @@
 .news-block-two .inner-box{
   position:relative;
   border-radius: 7px;
-  box-shadow: 0 0 0 1px var(--brand-dark-gray);
+  box-shadow: 0 0 0 1px var(--brand-gray);
   overflow:hidden;}
 
 .news-block-two .inner-box .upper-box{
