--- a/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
@@ -1,18 +1,20 @@
+@use "../helpers/functions" as lib;
+
 .btn {
   @extend .btn;
 
   &_in-header {
-    padding: 9px;
+    padding: lib.rem(9);
     position: relative;
     border: 0;
-    border-radius: 32px;
+    border-radius: lib.rem(32);
     background: transparent;
     box-shadow: inset 0 0 0 1px var(--brand-primary);
     overflow: hidden;
 
     @include media-breakpoint-down(md) {
       width: calc(100% - 20px);
-      margin: 10px 10px 5px;
+      margin: lib.rem(10) lib.rem(10) lib.rem(5);
     }
   ;
 
@@ -37,7 +39,7 @@
       -ms-transform-origin: top right;
       -webkit-transform-origin: top right;
       transform-origin: top right;
-      border-radius: 32px;
+      border-radius: lib.rem(32);
       background-color: var(--brand-primary);
     }
 
@@ -63,13 +65,13 @@
       -webkit-transition: color 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
       transition: color 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
       color: var(--brand-primary);
-      font-size: 18px;
+      font-size: lib.rem(18);
       line-height: 1;
     }
 
     i {
       margin-right: 0.4rem;
-      font-size: 16px;
+      font-size: lib.rem(16);
     }
 
     &:hover {
@@ -83,7 +85,7 @@
     }
 
     &:not(:last-of-type) {
-      margin-right: 40px;
+      margin-right: lib.rem(40);
     }
   }
 
@@ -110,18 +112,18 @@
 
 .btn-style-one {
   display: inline-block;
-  padding: 10px 44px 10px;
+  padding: lib.rem(10) lib.rem(44) lib.rem(10);
   position: relative;
   text-transform: capitalize;
   color: #ffffff;
   border: 1px solid var(--brand-primary);
-  border-radius: 50px;
+  border-radius: lib.rem(50);
   background: none;
   background-color: var(--brand-primary);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.10);
-  font-size: 18px;
+  font-size: lib.rem(18);
   font-weight: 400;
-  line-height: 30px;
+  line-height: lib.rem(30);
   overflow: hidden;
 
   & .txt {
@@ -164,16 +166,16 @@
 
 .btn-style-two {
   display: inline-block;
-  padding: 10px 44px 10px;
+  padding: lib.rem(10) lib.rem(44) lib.rem(10);
   position: relative;
   text-transform: capitalize;
   color: #ffffff;
   border: 1px solid #ffffff;
-  border-radius: 50px;
+  border-radius: lib.rem(50);
   background: none;
-  font-size: 18px;
+  font-size: lib.rem(18);
   font-weight: 400;
-  line-height: 30px;
+  line-height: lib.rem(30);
   overflow: hidden;
 
   &:before {
@@ -230,11 +232,11 @@
 
 .btn-style-three {
   display: inline-block;
-  padding: 12px 44px 12px;
+  padding: lib.rem(12) lib.rem(44) lib.rem(12);
   position: relative;
   text-transform: capitalize;
   color: #ffffff;
-  border-radius: 50px;
+  border-radius: lib.rem(50);
   background: none;
   background-color: var(--brand-primary);
   -moz-box-shadow: 0 10px 32px rgba(255, 98, 98, 0.10);
@@ -242,9 +244,9 @@
   -o-box-shadow: 0 10px 32px rgba(255, 98, 98, 0.10);
   -webkit-box-shadow: 0 10px 32px rgba(255, 98, 98, 0.10);
   box-shadow: 0 10px 32px rgba(255, 98, 98, 0.10);
-  font-size: 18px;
+  font-size: lib.rem(18);
   font-weight: 400;
-  line-height: 32px;
+  line-height: lib.rem(32);
   overflow: hidden;
 
   &:before {
@@ -295,7 +297,7 @@
 
 .btn-style-four {
   display: inline-block;
-  padding: 10px 40px 10px;
+  padding: lib.rem(10) lib.rem(40) lib.rem(10);
   position: relative;
   text-transform: capitalize;
   color: #ffffff;
@@ -307,9 +309,9 @@
   -o-box-shadow: 0 10px 30px rgba(255, 98, 98, 0.10);
   -webkit-box-shadow: 0 10px 30px rgba(255, 98, 98, 0.10);
   box-shadow: 0 10px 30px rgba(255, 98, 98, 0.10);
-  font-size: 18px;
+  font-size: lib.rem(18);
   font-weight: 400;
-  line-height: 30px;
+  line-height: lib.rem(30);
   overflow: hidden;
 
   &:before {
@@ -359,7 +361,7 @@
   }
 
   &_rounded {
-    border-radius: 40px;
+    border-radius: lib.rem(40);
   }
 
   &_reversed {
@@ -383,17 +385,17 @@
   }
 
   &_big {
-    line-height: 33px;
+    line-height: lib.rem(33);
 
     .text,
     .txt {
-      font-size: 24px;
+      font-size: lib.rem(24);
       font-weight: 700;
     }
   }
 
   &_small {
-    padding: 3px 15px;
+    padding: lib.rem(3) lib.rem(15);
 
     .text {
       font-size: 0.9rem;
@@ -414,16 +416,16 @@
 
 .btn-style-five {
   display: inline-block;
-  padding: 9px 44px 9px;
+  padding: lib.rem(9) lib.rem(44) lib.rem(9);
   position: relative;
   text-transform: capitalize;
   color: var(--brand-primary);
   border: 1px solid var(--brand-primary);
-  border-radius: 50px;
+  border-radius: lib.rem(50);
   background: none;
-  font-size: 24px;
+  font-size: lib.rem(24);
   font-weight: 700;
-  line-height: 35px;
+  line-height: lib.rem(35);
   overflow: hidden;
 
   &:before {
@@ -460,8 +462,8 @@
   }
 
   &_small {
-    font-size: 18px;
-    line-height: 26px;
+    font-size: lib.rem(18);
+    line-height: lib.rem(26);
   }
 
   & .txt {
