--- a/qdrant-landing/themes/qdrant/static/css/blocks/_header.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_header.scss
@@ -1,3 +1,5 @@
+@use "../helpers/functions" as lib;
+
 /***
 
 ====================================================================
@@ -12,8 +14,8 @@
 /*Sticky Header*/
 .main-header {
   width: 100%;
-  padding-top: 17px;
-  padding-bottom: 17px;
+  padding-top: lib.rem(17);
+  padding-bottom: lib.rem(17);
   position: absolute;
   z-index: 999;
   -moz-animation-duration: 500ms;
@@ -23,7 +25,7 @@
   animation-duration: 500ms;
 
   .header-top {
-    padding: 18px 0;
+    padding: lib.rem(18) 0;
     position: relative;
     border-bottom: 1px solid rgba(255, 255, 255, 0.10);
 
@@ -37,17 +39,17 @@
 
       li {
         display: inline-block;
-        margin-right: 20px;
+        margin-right: lib.rem(20);
         position: relative;
         color: #ffffff;
-        font-size: 15px;
+        font-size: lib.rem(15);
 
         &:last-child {
           margin-right: 0;
         }
 
         .icon {
-          margin-right: 12px;
+          margin-right: lib.rem(12);
           position: relative;
         }
 
@@ -68,13 +70,13 @@
 
       li {
         display: inline-block;
-        margin-left: 15px;
+        margin-left: lib.rem(15);
         position: relative;
 
         a {
           position: relative;
           color: #ffffff;
-          font-size: 15px;
+          font-size: lib.rem(15);
 
           &:hover {
             color: var(--brand-primary);
@@ -155,18 +157,18 @@
       li.dropdown {
         .dropdown-btn {
           display: none;
-          width: 30px;
-          height: 30px;
+          width: lib.rem(30);
+          height: lib.rem(30);
           position: absolute;
           z-index: 5;
-          top: 6px;
-          right: 10px;
+          top: lib.rem(6);
+          right: lib.rem(10);
           cursor: pointer;
           text-align: center;
           color: #ffffff;
           border: 1px solid #ffffff;
-          background-size: 20px;
-          line-height: 28px;
+          background-size: lib.rem(20);
+          line-height: lib.rem(28);
         }
       }
     }
@@ -179,7 +181,7 @@
     position: static;
 
     > li {
-      margin-right: 40px;
+      margin-right: lib.rem(40);
       position: relative;
       float: left;
 
@@ -196,7 +198,7 @@
 
       > ul {
         display: none;
-        width: 230px;
+        width: lib.rem(230);
         padding: 0 0;
         position: absolute;
         z-index: 100;
@@ -210,7 +212,7 @@
         &:before {
           display: block;
           width: 100%;
-          height: 30px;
+          height: lib.rem(30);
           position: absolute;
           top: -30px;
           left: 0;
@@ -228,18 +230,18 @@
 
           > a {
             display: block;
-            padding: 12px 18px;
+            padding: lib.rem(12) lib.rem(18);
             position: relative;
             text-transform: capitalize;
             color: var(--brand-secondary);
-            font-size: 18px;
+            font-size: lib.rem(18);
             font-weight: 400;
-            line-height: 24px;
+            line-height: lib.rem(24);
           }
 
           &:hover {
             > a {
-              padding-left: 30px;
+              padding-left: lib.rem(30);
               color: #ffffff;
               background: var(--brand-primary);
             }
@@ -247,7 +249,7 @@
 
           > ul {
             display: none;
-            width: 230px;
+            width: lib.rem(230);
             padding: 0 0;
             position: absolute;
             z-index: 100;
@@ -271,18 +273,18 @@
 
               > a {
                 display: block;
-                padding: 12px 18px;
+                padding: lib.rem(12) lib.rem(18);
                 position: relative;
                 text-transform: capitalize;
                 color: var(--brand-secondary);
-                font-size: 18px;
+                font-size: lib.rem(18);
                 font-weight: 400;
-                line-height: 24px;
+                line-height: lib.rem(24);
               }
 
               &:hover {
                 > a {
-                  padding-left: 30px;
+                  padding-left: lib.rem(30);
                   color: #ffffff;
                   background: var(--brand-primary);
                 }
@@ -293,19 +295,19 @@
               > a {
                 &:after {
                   display: block;
-                  width: 10px;
-                  height: 20px;
+                  width: lib.rem(10);
+                  height: lib.rem(20);
                   position: absolute;
                   z-index: 5;
-                  top: 11px;
-                  right: 10px;
+                  top: lib.rem(11);
+                  right: lib.rem(10);
                   content: "\f105";
                   text-align: center;
                   color: #272727;
                   font-family: 'Font Awesome 5 Free';
-                  font-size: 16px;
+                  font-size: lib.rem(16);
                   font-weight: 900;
-                  line-height: 20px;
+                  line-height: lib.rem(20);
                 }
               }
 
@@ -329,19 +331,19 @@
           > a {
             &:after {
               display: block;
-              width: 10px;
-              height: 20px;
+              width: lib.rem(10);
+              height: lib.rem(20);
               position: absolute;
               z-index: 5;
-              top: 14px;
-              right: 15px;
+              top: lib.rem(14);
+              right: lib.rem(15);
               content: "\f105";
               text-align: center;
               color: var(--brand-secondary);
               font-family: 'Font Awesome 5 Free';
-              font-size: 16px;
+              font-size: lib.rem(16);
               font-weight: 900;
-              line-height: 20px;
+              line-height: lib.rem(20);
             }
           }
 
@@ -370,9 +372,9 @@
         opacity: 1;
         color: var(--brand-secondary);
         font-family: $font-family-non-content;
-        font-size: 18px;
+        font-size: lib.rem(18);
         font-weight: 400;
-        line-height: 29px;
+        line-height: lib.rem(29);
       }
     }
 
@@ -386,7 +388,7 @@
     > li.dropdown {
       &:hover {
         > ul {
-          margin-top: 20px;
+          margin-top: lib.rem(20);
           visibility: visible;
           -moz-transform: rotateX(0deg);
           -ms-transform: rotateX(0deg);
@@ -442,6 +444,6 @@
 /* Sticky Top */
 
 .sticky-top{
-  top:110px;
+  top: lib.rem(110);
   z-index:1;
 }
