--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -93,7 +93,7 @@
 @import "blocks/banner";
 @import "blocks/page-title";
 @import "blocks/logo";
-@import "blocks/button";
+@import "blocks/buttons";
 @import "blocks/copy-btn";
 @import "blocks/hero-code";
 @import "blocks/features-section";
@@ -101,6 +101,7 @@
 @import "blocks/widget-header";
 @import "blocks/post-preview";
 @import "blocks/steps-form";
+@import "blocks/documentation";
 @import "blocks/article";
 @import "blocks/blog";
 @import "blocks/article-card";
